<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_activity_lang"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundPrimary"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:src="@drawable/img_covid_logo_new"
        android:id="@+id/logo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/relative_languages"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_your_language"
            android:id="@+id/select_language"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_below="@+id/select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingVertical="15dp">


            <RadioButton
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:paddingStart="10dp"
                android:buttonTint="@color/blue"
                android:checked="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <RadioButton
                android:id="@+id/french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Français"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:buttonTint="@color/blue"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                />

            <RadioButton
                android:id="@+id/arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="العربية"
                android:paddingStart="10dp"
                android:layout_marginTop="15dp"
                />


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_mode"
            android:id="@+id/select_mode"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_below="@+id/radio_group"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group_mode"
            android:layout_below="@+id/select_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingVertical="15dp">


            <RadioButton
                android:id="@+id/night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_mode"
                android:paddingStart="10dp"
                android:buttonTint="@color/blue"
                android:checked="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <RadioButton
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_mode"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:buttonTint="@color/blue"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                />

        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/relative_button"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/go_to_dashboard"
            android:id="@+id/confirm_language"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </RelativeLayout>

</RelativeLayout>